Fix security vulnerabilities

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "dompurify": "^3.2.6",
     "dotenv": "^17.2.1",
     "lucide-react": "^0.542.0",
     "next": "15.5.2",
@@ -41,6 +42,7 @@
     "@supabase/supabase-js": "^2.57.0",
     "@tailwindcss/postcss": "^4",
     "@testing-library/react": "^16.3.0",
+    "@types/dompurify": "^3.0.5",
     "@types/jest": "^30.0.0",
     "@types/node": "^20",
     "@types/react": "^19",
